Move javadoc generation to top-level.